@@ -1,5 +1,11 @@
 2006-06-21  Roman Kennke  <kennke@aicas.com>
 
+	* javax/swing/UIManager.java
+	(MultiplexUIDefaults.clear): Removed method. The fallback UIDefaults
+	must not be cleared.
+
+2006-06-21  Roman Kennke  <kennke@aicas.com>
+
 	* javax/swing/plaf/metal/MetalUtils.java
 	(paintHorizontalGradient): Use paintHorizontalGradient2D when
 	Graphics2D is available. Use fillRect instead of drawLine, this
